# autotools-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md
.github/workflows/: autotools-rs-compact.yml
examples/xmp-sys/: Cargo.toml  build.rs  lib.rs
src/: lib.rs
